# codehornets-ai

./: .env.example  .gitignore  AGENT_ACTIVATION_SYSTEMS.md  AGENT_MEMORY_AND_IMPROVEMENT_GUIDE.md  CLAUDE.md  HOOKS_BASED_AGENT_COMMUNICATION.md  HOW_AGENT_MANAGER_PLUGIN_WORKS.md  Makefile  PRODUCTION_MULTI_AGENT_SYSTEM.md  QUICKSTART.md  architecture.md  auto-configure-agents.sh  conversation_memory_template.md  package-lock.json  package.json  save-agent-work.sh  send-task-to-marie.sh  setup-workers-interactive.sh
libs/digital-agency/: .env.example  .gitignore  Dockerfile  INSTALL.md  MIGRATION.md  Makefile  Makefile.bat  README.md  celery_app.py  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
libs/digital-agency/agents/: audit_results.json  audit_script.py  complete_agents.py  complete_inventory.json  complete_inventory.py  deep_audit.py
libs/digital-agency/agents/01_offer/: README.md  __init__.py  _enhance_agents.py  _write_market_researcher.py  create_all_agents.sh  gen_agents.py  gen_mr.py
libs/digital-agency/agents/02_marketing/: README.md  __init__.py
libs/digital-agency/agents/03_sales/: README.md  __init__.py
libs/digital-agency/agents/04_fulfillment/: README.md  __init__.py
libs/digital-agency/agents/05_feedback_loop/: README.md  __init__.py
libs/digital-agency/agents/06_business_dev/: COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md
libs/digital-agency/agents/06_operations/: README.md  __init__.py
libs/digital-agency/agents/07_customer_support/: IMPLEMENTATION_REPORT.md  NEW_AGENTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  __init__.py
libs/digital-agency/agents/08_leadership/: README.md  __init__.py
libs/digital-agency/agents/09_innovation/: README.md  __init__.py
libs/digital-agency/agents/10_enablement/: README.md  __init__.py
libs/digital-agency/api/: __init__.py  main.py
libs/digital-agency/api/middleware/: JWT_AUTHENTICATION.md  __init__.py  auth.py  rate_limiter.py  test_auth_example.py
libs/digital-agency/api/routes/: __init__.py  agents.py  health.py  tasks.py  webhooks.py
libs/digital-agency/api/schemas/: __init__.py  agent_schemas.py  task_schemas.py
libs/digital-agency/config/: __init__.py  agents.yaml  api_keys.py  domains.yaml  settings.py
libs/digital-agency/core/: __init__.py  agent_base.py  communication.py  logger.py  orchestrator.py  state_manager.py  task_base.py
libs/digital-agency/deployment/docker/: Dockerfile.agent  Dockerfile.api  docker-compose.yml
libs/digital-agency/deployment/terraform/: main.tf  outputs.tf  variables.tf
libs/digital-agency/docs/: AGENTS_07_08_SUMMARY.md  AGENT_AUDIT_REPORT.md  COMPLETENESS_REPORT.md  CONFIGURATION_GUIDE.md  DELIVERY_REPORT.md  DOCKER_SETUP.md  FINAL_COMPLETION_REPORT.md  FIXES_APPLIED.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INNOVATION_ENABLEMENT_SUMMARY.md  MISSION_COMPLETE.md  MONITORING_IMPLEMENTATION.md  ORGANIZATION_MINDMAP.md  PHASE_2_COMPLETION_REPORT.md  PROJECT_STATISTICS.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  QUICK_START.md  SALES_AND_FULFILLMENT_SUMMARY.md  VERIFICATION_REPORT_04_05_06.md  VERIFICATION_STATS.md  VERIFICATION_SUMMARY.md  VERIFICATION_SUMMARY.txt  agent_guide.md  api_reference.md  architecture.md  deployment.md  inventory_output.txt  organization_mindmap.html  workflows.md
libs/digital-agency/infrastructure/: README.md
libs/digital-agency/infrastructure/docker/: .env.example  DATABASE_SETUP.md  DEVELOPER_SETUP_SUMMARY.md  Dockerfile  docker-compose.unified.yml  docker-compose.yml
libs/digital-agency/infrastructure/railway/: README.md
libs/digital-agency/infrastructure/render/: render.yaml
libs/digital-agency/infrastructure/systemd/: n8n-logrotate  n8n-painterflow.service
libs/digital-agency/infrastructure/terraform/: DEPLOYMENT_GUIDE.md  terraform.tfvars.example
libs/digital-agency/scripts/: create_agent.py  deploy_agent.py  install.sh  migrate_db.py  run_workflow.py  seed_data.py  test_agent.py
libs/digital-agency/shared/: __init__.py  celery_app.py
libs/digital-agency/shared/database/: __init__.py  connection.py  models.py
libs/digital-agency/shared/integrations/: __init__.py  claude_client.py  crm_client.py  google_client.py  hubspot_client.py  slack_client.py
libs/digital-agency/shared/prompts/: __init__.py  system_prompts.py  templates.py
libs/digital-agency/shared/utils/: __init__.py  api_client.py  data_transformer.py  file_handler.py  validators.py
libs/digital-agency/tests/: __init__.py  conftest.py
libs/digital-agency/tests/e2e/: test_api_workflows.py
libs/digital-agency/workflows/: __init__.py  feedback_to_offer.py  fulfillment_to_feedback.py  marketing_to_sales.py  offer_to_marketing.py  sales_to_fulfillment.py
(+1581 files in other folders)
